static/styles.css
/*
 * Copyright (C) 2019 Alexandros Theodotou <alex at zrythm dot org>
 *
 * This file is part of Zrythm
 *
 * Zrythm is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * Zrythm is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU General Affero Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */

.logo_img {
  vertical-align: middle;
  width: 28;
}

.globe {
  float: right;
}

.screenshot_img {
  max-width: 70%;
}

.features_box {
  max-width: 70%;
  padding-bottom: 3%;
}

.liberapay_btn {
  vertical-align: middle;
  float: right;
}

.footer_container {
  /*max-width: 98%;*/
  max-width: 70%;
}

tbody {
  border-width: 0px !important;
}

table caption {
  flex: inherit;
}

table {
  max-height: 100% !important;
}

table td {
  padding: 2px !important;
  border-top: 0px !important;
  flex: initial !important;
}

.first_col {
  width: 180px;
}

.second_col {
  /*width: 70%;*/
}

